gitops/k8s/shared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster
  labels:
    app: togglemaster
